# ML-Zoompcamp

Capstone Project - 1/: Dockerfile  README.md  bentofile.yaml  entrypoint.sh  get_bento.py  notebook.ipynb  serve.py  train.py
Capstone Project - 1/docker/: Dockerfile
Homework/: Homework #02 - Regression.ipynb  Homework #06 - Trees.ipynb  Homework #07 - Bento-Production.ipynb  Homework #1 - ML Zoomcamp.ipynb  Homework #10 - Kubernetes.ipynb  Homework #3 - Classification.ipynb  Homework #4 - Evaluation.ipynb  Homework #5 - Deployment.ipynb  Homework#8 -Neural Networks and Deep Learning.ipynb  Homework#9 - Serverless.ipynb  readme.md
Midterm Project/: Notebook.ipynb  README.md  bentofile.yaml  prediction_zones.csv  pyproject.toml  serve.py  train.py
Midterm Project/ny_taxi_model/: latest
Midterm Project/ny_taxi_model/zuxnagc3qolf3bfj/: custom_objects.pkl  model.yaml  saved_model.ubj
